# ogssView2

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
lib/ogss.common.cpp/: CMakeLists.txt
lib/ogss.common.cpp/ogss/internal/: EnumPool.h
src/empty/: File.cpp  File.h  Pools.h  StringKeeper.h  enums.h
src/ui/: GraphExport.cpp  GraphExport.h  MainFrame.cpp  MainFrame.h  ObjectPane.cpp  ObjectPane.h  Show.cpp  Show.h  TabEntry.cpp  TabEntry.h  TypePane.cpp  TypePane.h  main.cpp  main.h
test/: enums.sg  farben.sg  tyr.lang.tl
